Proyecto/src/TP2/BYACC/y.output
   0  $accept : program $end

   1  $$1 :

   2  $$2 :

   3  program : PROGRAM ID ';' $$1 declaracion $$2 cuerpo_programa

   4  $$3 :

   5  program : PROGRAM ID ';' $$3 cuerpo_programa
   6          | PROGRAM ';' declaracion cuerpo_programa
   7          | PROGRAM ';' cuerpo_programa
   8          | declaracion cuerpo_programa
   9          | cuerpo_programa
  10          | PROGRAM ID ';' error

  11  cuerpo_programa : BEGIN sentencia_ejec END ';'
  12                  | BEGIN END ';'

  13  bloque_sentencias : BEGIN sentencia_ejec END ';'
  14                    | miembro_sentencia_ejec

  15  tipo_id : UINT
  16          | DOUBLE
  17          | FUNC

  18  cuerpo_func : BEGIN sentencia_ejec RETURN retorno END
  19              | BEGIN sentencia_ejec RETURN retorno post_condicion END
  20              | BEGIN sentencia_ejec RETURN END
  21              | BEGIN sentencia_ejec RETURN post_condicion END
  22              | BEGIN sentencia_ejec RETURN ';' END
  23              | BEGIN sentencia_ejec RETURN ';' post_condicion END
  24              | BEGIN sentencia_ejec RETURN retorno END declaracion
  25              | BEGIN sentencia_ejec RETURN retorno post_condicion END declaracion
  26              | BEGIN sentencia_ejec RETURN retorno END BEGIN
  27              | BEGIN sentencia_ejec RETURN retorno post_condicion END BEGIN

  28  $$4 :

  29  $$5 :

  30  $$6 :

  31  post_condicion : POST ':' condicion ',' CADENA ';' $$4 $$5 $$6
  32                 | POST ':' condicion ',' ';'

  33  retorno : '(' expresion ')' ';'

  34  declaracion : FUNC tipo_id nombre_func params_func definicion_func ';'
  35              | tipo_id lista_variables ';'
  36              | tipo_id lista_variables ';' declaracion

  37  $$7 :

  38  declaracion : FUNC tipo_id nombre_func params_func definicion_func ';' $$7 declaracion
  39              | lista_variables ';'
  40              | lista_variables ';' declaracion

  41  lista_variables : ID
  42                  | ID ',' lista_variables
  43                  | ID BEGIN

  44  nombre_func : ID

  45  params_func : '(' param ')'
  46              | '(' ')'

  47  param : tipo_id ID

  48  $$8 :

  49  definicion_func : declaracion $$8 cuerpo_func

  50  $$9 :

  51  definicion_func : $$9 cuerpo_func
  52                  |

  53  sentencia_ejec : miembro_sentencia_ejec sentencia_ejec
  54                 | miembro_sentencia_ejec

  55  miembro_sentencia_ejec : invocacion ';'
  56                         | asignacion ';'
  57                         | iteracion ';'
  58                         | seleccion ';'
  59                         | impresion ';'
  60                         | BREAK ';'
  61                         | seleccion miembro_sentencia_ejec
  62                         | invocacion miembro_sentencia_ejec
  63                         | asignacion miembro_sentencia_ejec
  64                         | iteracion miembro_sentencia_ejec
  65                         | impresion miembro_sentencia_ejec
  66                         | BREAK miembro_sentencia_ejec

  67  invocacion : ID '(' ')'
  68             | ID '(' expresion ')'

  69  asignacion : ID ASIG expresion
  70             | ID ASIG error
  71             | ID
  72             | error ASIG expresion

  73  expresion : expresion '+' termino
  74            | expresion '-' termino
  75            | termino

  76  termino : termino '*' factor
  77          | termino '/' factor
  78          | factor

  79  factor : ID
  80         | CTE_UINT
  81         | CTE_DOUBLE
  82         | '-' factor
  83         | invocacion
  84         | ERR_CTE_FUERA_RANGO
  85         | ERR_FORMATO_CTE

  86  impresion : PRINT '(' CADENA ')'
  87            | PRINT '(' error ')'

  88  iteracion : encabezado_iteracion bloque_sentencias UNTIL condicion
  89            | encabezado_iteracion bloque_sentencias

  90  encabezado_iteracion : REPEAT

  91  condicion : '(' expresion comparador expresion ')'
  92            | '(' comparador expresion ')'
  93            | '(' expresion comparador ')'
  94            | '(' condicion operador_logico condicion ')'
  95            | '(' error ')'

  96  comparador : COMP_MAYOR_IGUAL
  97             | COMP_MENOR_IGUAL
  98             | '<'
  99             | '>'
 100             | COMP_IGUAL
 101             | COMP_DISTINTO

 102  operador_logico : AND
 103                  | OR

 104  seleccion : encabezado_if rama_then ENDIF
 105            | encabezado_if rama_then rama_else ENDIF

 106  encabezado_if : IF condicion
 107                | IF

 108  rama_then : THEN bloque_sentencias
 109            | THEN

 110  rama_else : ELSE bloque_sentencias
 111            | ELSE

state 0
	$accept : . program $end  (0)

	PROGRAM  shift 1
	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 4
	ID  shift 5
	FUNC  shift 6
	.  error

	program  goto 7
	declaracion  goto 8
	cuerpo_programa  goto 9
	tipo_id  goto 10
	lista_variables  goto 11


state 1
	program : PROGRAM . ID ';' $$1 declaracion $$2 cuerpo_programa  (3)
	program : PROGRAM . ID ';' $$3 cuerpo_programa  (5)
	program : PROGRAM . ';' declaracion cuerpo_programa  (6)
	program : PROGRAM . ';' cuerpo_programa  (7)
	program : PROGRAM . ID ';' error  (10)

	ID  shift 12
	';'  shift 13
	.  error


state 2
	tipo_id : UINT .  (15)

	.  reduce 15


state 3
	tipo_id : DOUBLE .  (16)

	.  reduce 16


state 4
	cuerpo_programa : BEGIN . sentencia_ejec END ';'  (11)
	cuerpo_programa : BEGIN . END ';'  (12)

	error  shift 14
	END  shift 15
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	.  error

	sentencia_ejec  goto 21
	miembro_sentencia_ejec  goto 22
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 5
	lista_variables : ID .  (41)
	lista_variables : ID . ',' lista_variables  (42)
	lista_variables : ID . BEGIN  (43)

	BEGIN  shift 30
	','  shift 31
	';'  reduce 41


state 6
	tipo_id : FUNC .  (17)
	declaracion : FUNC . tipo_id nombre_func params_func definicion_func ';'  (34)
	declaracion : FUNC . tipo_id nombre_func params_func definicion_func ';' $$7 declaracion  (38)

	UINT  shift 2
	DOUBLE  shift 3
	FUNC  shift 32
	ID  reduce 17

	tipo_id  goto 33


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	program : declaracion . cuerpo_programa  (8)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 34


state 9
	program : cuerpo_programa .  (9)

	.  reduce 9


state 10
	declaracion : tipo_id . lista_variables ';'  (35)
	declaracion : tipo_id . lista_variables ';' declaracion  (36)

	ID  shift 5
	.  error

	lista_variables  goto 35


state 11
	declaracion : lista_variables . ';'  (39)
	declaracion : lista_variables . ';' declaracion  (40)

	';'  shift 36
	.  error


state 12
	program : PROGRAM ID . ';' $$1 declaracion $$2 cuerpo_programa  (3)
	program : PROGRAM ID . ';' $$3 cuerpo_programa  (5)
	program : PROGRAM ID . ';' error  (10)

	';'  shift 37
	.  error


state 13
	program : PROGRAM ';' . declaracion cuerpo_programa  (6)
	program : PROGRAM ';' . cuerpo_programa  (7)

	UINT  shift 2
	DOUBLE  shift 3
	BEGIN  shift 4
	ID  shift 5
	FUNC  shift 6
	.  error

	declaracion  goto 38
	cuerpo_programa  goto 39
	tipo_id  goto 10
	lista_variables  goto 11


state 14
	asignacion : error . ASIG expresion  (72)

	ASIG  shift 40
	.  error


state 15
	cuerpo_programa : BEGIN END . ';'  (12)

	';'  shift 41
	.  error


state 16
	invocacion : ID . '(' ')'  (67)
	invocacion : ID . '(' expresion ')'  (68)
	asignacion : ID . ASIG expresion  (69)
	asignacion : ID . ASIG error  (70)
	asignacion : ID .  (71)

	ASIG  shift 42
	'('  shift 43
	error  reduce 71
	ID  reduce 71
	PRINT  reduce 71
	REPEAT  reduce 71
	IF  reduce 71
	BREAK  reduce 71
	';'  reduce 71


state 17
	impresion : PRINT . '(' CADENA ')'  (86)
	impresion : PRINT . '(' error ')'  (87)

	'('  shift 44
	.  error


state 18
	encabezado_iteracion : REPEAT .  (90)

	.  reduce 90


state 19
	encabezado_if : IF . condicion  (106)
	encabezado_if : IF .  (107)

	'('  shift 45
	THEN  reduce 107

	condicion  goto 46


state 20
	miembro_sentencia_ejec : BREAK . ';'  (60)
	miembro_sentencia_ejec : BREAK . miembro_sentencia_ejec  (66)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	';'  shift 47
	.  error

	miembro_sentencia_ejec  goto 48
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 21
	cuerpo_programa : BEGIN sentencia_ejec . END ';'  (11)

	END  shift 49
	.  error


state 22
	sentencia_ejec : miembro_sentencia_ejec . sentencia_ejec  (53)
	sentencia_ejec : miembro_sentencia_ejec .  (54)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	RETURN  reduce 54
	END  reduce 54

	sentencia_ejec  goto 50
	miembro_sentencia_ejec  goto 22
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 23
	miembro_sentencia_ejec : invocacion . ';'  (55)
	miembro_sentencia_ejec : invocacion . miembro_sentencia_ejec  (62)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	';'  shift 51
	.  error

	miembro_sentencia_ejec  goto 52
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 24
	miembro_sentencia_ejec : asignacion . ';'  (56)
	miembro_sentencia_ejec : asignacion . miembro_sentencia_ejec  (63)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	';'  shift 53
	.  error

	miembro_sentencia_ejec  goto 54
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 25
	miembro_sentencia_ejec : iteracion . ';'  (57)
	miembro_sentencia_ejec : iteracion . miembro_sentencia_ejec  (64)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	';'  shift 55
	.  error

	miembro_sentencia_ejec  goto 56
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 26
	miembro_sentencia_ejec : seleccion . ';'  (58)
	miembro_sentencia_ejec : seleccion . miembro_sentencia_ejec  (61)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	';'  shift 57
	.  error

	miembro_sentencia_ejec  goto 58
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 27
	miembro_sentencia_ejec : impresion . ';'  (59)
	miembro_sentencia_ejec : impresion . miembro_sentencia_ejec  (65)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	';'  shift 59
	.  error

	miembro_sentencia_ejec  goto 60
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 28
	iteracion : encabezado_iteracion . bloque_sentencias UNTIL condicion  (88)
	iteracion : encabezado_iteracion . bloque_sentencias  (89)

	error  shift 14
	BEGIN  shift 61
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	.  error

	bloque_sentencias  goto 62
	miembro_sentencia_ejec  goto 63
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 29
	seleccion : encabezado_if . rama_then ENDIF  (104)
	seleccion : encabezado_if . rama_then rama_else ENDIF  (105)

	THEN  shift 64
	.  error

	rama_then  goto 65


state 30
	lista_variables : ID BEGIN .  (43)

	.  reduce 43


state 31
	lista_variables : ID ',' . lista_variables  (42)

	ID  shift 5
	.  error

	lista_variables  goto 66


state 32
	tipo_id : FUNC .  (17)

	.  reduce 17


state 33
	declaracion : FUNC tipo_id . nombre_func params_func definicion_func ';'  (34)
	declaracion : FUNC tipo_id . nombre_func params_func definicion_func ';' $$7 declaracion  (38)

	ID  shift 67
	.  error

	nombre_func  goto 68


state 34
	program : declaracion cuerpo_programa .  (8)

	.  reduce 8


state 35
	declaracion : tipo_id lista_variables . ';'  (35)
	declaracion : tipo_id lista_variables . ';' declaracion  (36)

	';'  shift 69
	.  error


state 36
	declaracion : lista_variables ';' .  (39)
	declaracion : lista_variables ';' . declaracion  (40)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	BEGIN  reduce 39
	';'  reduce 39

	declaracion  goto 70
	tipo_id  goto 10
	lista_variables  goto 11


state 37
	program : PROGRAM ID ';' . $$1 declaracion $$2 cuerpo_programa  (3)
	program : PROGRAM ID ';' . $$3 cuerpo_programa  (5)
	program : PROGRAM ID ';' . error  (10)
	$$1 : .  (1)
	$$3 : .  (4)

	error  shift 71
	UINT  reduce 1
	DOUBLE  reduce 1
	BEGIN  reduce 4
	ID  reduce 1
	FUNC  reduce 1

	$$1  goto 72
	$$3  goto 73


state 38
	program : PROGRAM ';' declaracion . cuerpo_programa  (6)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 74


state 39
	program : PROGRAM ';' cuerpo_programa .  (7)

	.  reduce 7


state 40
	asignacion : error ASIG . expresion  (72)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	expresion  goto 81
	invocacion  goto 82
	termino  goto 83
	factor  goto 84


state 41
	cuerpo_programa : BEGIN END ';' .  (12)

	.  reduce 12


state 42
	asignacion : ID ASIG . expresion  (69)
	asignacion : ID ASIG . error  (70)

	error  shift 85
	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	expresion  goto 86
	invocacion  goto 82
	termino  goto 83
	factor  goto 84


state 43
	invocacion : ID '(' . ')'  (67)
	invocacion : ID '(' . expresion ')'  (68)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	')'  shift 87
	'-'  shift 80
	.  error

	expresion  goto 88
	invocacion  goto 82
	termino  goto 83
	factor  goto 84


state 44
	impresion : PRINT '(' . CADENA ')'  (86)
	impresion : PRINT '(' . error ')'  (87)

	error  shift 89
	CADENA  shift 90
	.  error


state 45
	condicion : '(' . expresion comparador expresion ')'  (91)
	condicion : '(' . comparador expresion ')'  (92)
	condicion : '(' . expresion comparador ')'  (93)
	condicion : '(' . condicion operador_logico condicion ')'  (94)
	condicion : '(' . error ')'  (95)

	error  shift 91
	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	COMP_MAYOR_IGUAL  shift 92
	COMP_MENOR_IGUAL  shift 93
	COMP_IGUAL  shift 94
	COMP_DISTINTO  shift 95
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'('  shift 45
	'-'  shift 80
	'<'  shift 96
	'>'  shift 97
	.  error

	condicion  goto 98
	expresion  goto 99
	invocacion  goto 82
	termino  goto 83
	factor  goto 84
	comparador  goto 100


state 46
	encabezado_if : IF condicion .  (106)

	.  reduce 106


state 47
	miembro_sentencia_ejec : BREAK ';' .  (60)

	.  reduce 60


state 48
	miembro_sentencia_ejec : BREAK miembro_sentencia_ejec .  (66)

	.  reduce 66


state 49
	cuerpo_programa : BEGIN sentencia_ejec END . ';'  (11)

	';'  shift 101
	.  error


state 50
	sentencia_ejec : miembro_sentencia_ejec sentencia_ejec .  (53)

	.  reduce 53


state 51
	miembro_sentencia_ejec : invocacion ';' .  (55)

	.  reduce 55


state 52
	miembro_sentencia_ejec : invocacion miembro_sentencia_ejec .  (62)

	.  reduce 62


state 53
	miembro_sentencia_ejec : asignacion ';' .  (56)

	.  reduce 56


state 54
	miembro_sentencia_ejec : asignacion miembro_sentencia_ejec .  (63)

	.  reduce 63


state 55
	miembro_sentencia_ejec : iteracion ';' .  (57)

	.  reduce 57


state 56
	miembro_sentencia_ejec : iteracion miembro_sentencia_ejec .  (64)

	.  reduce 64


state 57
	miembro_sentencia_ejec : seleccion ';' .  (58)

	.  reduce 58


state 58
	miembro_sentencia_ejec : seleccion miembro_sentencia_ejec .  (61)

	.  reduce 61


state 59
	miembro_sentencia_ejec : impresion ';' .  (59)

	.  reduce 59


state 60
	miembro_sentencia_ejec : impresion miembro_sentencia_ejec .  (65)

	.  reduce 65


state 61
	bloque_sentencias : BEGIN . sentencia_ejec END ';'  (13)

	error  shift 14
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	.  error

	sentencia_ejec  goto 102
	miembro_sentencia_ejec  goto 22
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 62
	iteracion : encabezado_iteracion bloque_sentencias . UNTIL condicion  (88)
	iteracion : encabezado_iteracion bloque_sentencias .  (89)

	UNTIL  shift 103
	error  reduce 89
	ID  reduce 89
	PRINT  reduce 89
	REPEAT  reduce 89
	IF  reduce 89
	BREAK  reduce 89
	';'  reduce 89


state 63
	bloque_sentencias : miembro_sentencia_ejec .  (14)

	.  reduce 14


state 64
	rama_then : THEN . bloque_sentencias  (108)
	rama_then : THEN .  (109)

	error  shift 14
	BEGIN  shift 61
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	ELSE  reduce 109
	ENDIF  reduce 109

	bloque_sentencias  goto 104
	miembro_sentencia_ejec  goto 63
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 65
	seleccion : encabezado_if rama_then . ENDIF  (104)
	seleccion : encabezado_if rama_then . rama_else ENDIF  (105)

	ELSE  shift 105
	ENDIF  shift 106
	.  error

	rama_else  goto 107


state 66
	lista_variables : ID ',' lista_variables .  (42)

	.  reduce 42


state 67
	nombre_func : ID .  (44)

	.  reduce 44


state 68
	declaracion : FUNC tipo_id nombre_func . params_func definicion_func ';'  (34)
	declaracion : FUNC tipo_id nombre_func . params_func definicion_func ';' $$7 declaracion  (38)

	'('  shift 108
	.  error

	params_func  goto 109


state 69
	declaracion : tipo_id lista_variables ';' .  (35)
	declaracion : tipo_id lista_variables ';' . declaracion  (36)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	BEGIN  reduce 35
	';'  reduce 35

	declaracion  goto 110
	tipo_id  goto 10
	lista_variables  goto 11


state 70
	declaracion : lista_variables ';' declaracion .  (40)

	.  reduce 40


state 71
	program : PROGRAM ID ';' error .  (10)

	.  reduce 10


state 72
	program : PROGRAM ID ';' $$1 . declaracion $$2 cuerpo_programa  (3)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	.  error

	declaracion  goto 111
	tipo_id  goto 10
	lista_variables  goto 11


state 73
	program : PROGRAM ID ';' $$3 . cuerpo_programa  (5)

	BEGIN  shift 4
	.  error

	cuerpo_programa  goto 112


state 74
	program : PROGRAM ';' declaracion cuerpo_programa .  (6)

	.  reduce 6


state 75
	invocacion : ID . '(' ')'  (67)
	invocacion : ID . '(' expresion ')'  (68)
	factor : ID .  (79)

	'('  shift 43
	error  reduce 79
	ID  reduce 79
	PRINT  reduce 79
	REPEAT  reduce 79
	IF  reduce 79
	COMP_MAYOR_IGUAL  reduce 79
	COMP_MENOR_IGUAL  reduce 79
	COMP_IGUAL  reduce 79
	COMP_DISTINTO  reduce 79
	BREAK  reduce 79
	';'  reduce 79
	')'  reduce 79
	'+'  reduce 79
	'-'  reduce 79
	'*'  reduce 79
	'/'  reduce 79
	'<'  reduce 79
	'>'  reduce 79


state 76
	factor : CTE_UINT .  (80)

	.  reduce 80


state 77
	factor : CTE_DOUBLE .  (81)

	.  reduce 81


state 78
	factor : ERR_CTE_FUERA_RANGO .  (84)

	.  reduce 84


state 79
	factor : ERR_FORMATO_CTE .  (85)

	.  reduce 85


state 80
	factor : '-' . factor  (82)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	invocacion  goto 82
	factor  goto 113


state 81
	asignacion : error ASIG expresion .  (72)
	expresion : expresion . '+' termino  (73)
	expresion : expresion . '-' termino  (74)

	'+'  shift 114
	'-'  shift 115
	error  reduce 72
	ID  reduce 72
	PRINT  reduce 72
	REPEAT  reduce 72
	IF  reduce 72
	BREAK  reduce 72
	';'  reduce 72


state 82
	factor : invocacion .  (83)

	.  reduce 83


state 83
	expresion : termino .  (75)
	termino : termino . '*' factor  (76)
	termino : termino . '/' factor  (77)

	'*'  shift 116
	'/'  shift 117
	error  reduce 75
	ID  reduce 75
	PRINT  reduce 75
	REPEAT  reduce 75
	IF  reduce 75
	COMP_MAYOR_IGUAL  reduce 75
	COMP_MENOR_IGUAL  reduce 75
	COMP_IGUAL  reduce 75
	COMP_DISTINTO  reduce 75
	BREAK  reduce 75
	';'  reduce 75
	')'  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'<'  reduce 75
	'>'  reduce 75


state 84
	termino : factor .  (78)

	.  reduce 78


state 85
	asignacion : ID ASIG error .  (70)

	.  reduce 70


state 86
	asignacion : ID ASIG expresion .  (69)
	expresion : expresion . '+' termino  (73)
	expresion : expresion . '-' termino  (74)

	'+'  shift 114
	'-'  shift 115
	error  reduce 69
	ID  reduce 69
	PRINT  reduce 69
	REPEAT  reduce 69
	IF  reduce 69
	BREAK  reduce 69
	';'  reduce 69


state 87
	invocacion : ID '(' ')' .  (67)

	.  reduce 67


state 88
	invocacion : ID '(' expresion . ')'  (68)
	expresion : expresion . '+' termino  (73)
	expresion : expresion . '-' termino  (74)

	')'  shift 118
	'+'  shift 114
	'-'  shift 115
	.  error


state 89
	impresion : PRINT '(' error . ')'  (87)

	')'  shift 119
	.  error


state 90
	impresion : PRINT '(' CADENA . ')'  (86)

	')'  shift 120
	.  error


state 91
	condicion : '(' error . ')'  (95)

	')'  shift 121
	.  error


state 92
	comparador : COMP_MAYOR_IGUAL .  (96)

	.  reduce 96


state 93
	comparador : COMP_MENOR_IGUAL .  (97)

	.  reduce 97


state 94
	comparador : COMP_IGUAL .  (100)

	.  reduce 100


state 95
	comparador : COMP_DISTINTO .  (101)

	.  reduce 101


state 96
	comparador : '<' .  (98)

	.  reduce 98


state 97
	comparador : '>' .  (99)

	.  reduce 99


state 98
	condicion : '(' condicion . operador_logico condicion ')'  (94)

	AND  shift 122
	OR  shift 123
	.  error

	operador_logico  goto 124


state 99
	expresion : expresion . '+' termino  (73)
	expresion : expresion . '-' termino  (74)
	condicion : '(' expresion . comparador expresion ')'  (91)
	condicion : '(' expresion . comparador ')'  (93)

	COMP_MAYOR_IGUAL  shift 92
	COMP_MENOR_IGUAL  shift 93
	COMP_IGUAL  shift 94
	COMP_DISTINTO  shift 95
	'+'  shift 114
	'-'  shift 115
	'<'  shift 96
	'>'  shift 97
	.  error

	comparador  goto 125


state 100
	condicion : '(' comparador . expresion ')'  (92)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	expresion  goto 126
	invocacion  goto 82
	termino  goto 83
	factor  goto 84


state 101
	cuerpo_programa : BEGIN sentencia_ejec END ';' .  (11)

	.  reduce 11


state 102
	bloque_sentencias : BEGIN sentencia_ejec . END ';'  (13)

	END  shift 127
	.  error


state 103
	iteracion : encabezado_iteracion bloque_sentencias UNTIL . condicion  (88)

	'('  shift 45
	.  error

	condicion  goto 128


state 104
	rama_then : THEN bloque_sentencias .  (108)

	.  reduce 108


state 105
	rama_else : ELSE . bloque_sentencias  (110)
	rama_else : ELSE .  (111)

	error  shift 14
	BEGIN  shift 61
	ID  shift 16
	PRINT  shift 17
	REPEAT  shift 18
	IF  shift 19
	BREAK  shift 20
	ENDIF  reduce 111

	bloque_sentencias  goto 129
	miembro_sentencia_ejec  goto 63
	invocacion  goto 23
	asignacion  goto 24
	iteracion  goto 25
	seleccion  goto 26
	impresion  goto 27
	encabezado_iteracion  goto 28
	encabezado_if  goto 29


state 106
	seleccion : encabezado_if rama_then ENDIF .  (104)

	.  reduce 104


state 107
	seleccion : encabezado_if rama_then rama_else . ENDIF  (105)

	ENDIF  shift 130
	.  error


state 108
	params_func : '(' . param ')'  (45)
	params_func : '(' . ')'  (46)

	UINT  shift 2
	DOUBLE  shift 3
	FUNC  shift 32
	')'  shift 131
	.  error

	tipo_id  goto 132
	param  goto 133


state 109
	declaracion : FUNC tipo_id nombre_func params_func . definicion_func ';'  (34)
	declaracion : FUNC tipo_id nombre_func params_func . definicion_func ';' $$7 declaracion  (38)
	$$9 : .  (50)
	definicion_func : .  (52)

	UINT  shift 2
	DOUBLE  shift 3
	ID  shift 5
	FUNC  shift 6
	BEGIN  reduce 50
	';'  reduce 52

	declaracion  goto 134
	tipo_id  goto 10
	definicion_func  goto 135
	lista_variables  goto 11
	$$9  goto 136


state 110
	declaracion : tipo_id lista_variables ';' declaracion .  (36)

	.  reduce 36


state 111
	program : PROGRAM ID ';' $$1 declaracion . $$2 cuerpo_programa  (3)
	$$2 : .  (2)

	.  reduce 2

	$$2  goto 137


state 112
	program : PROGRAM ID ';' $$3 cuerpo_programa .  (5)

	.  reduce 5


state 113
	factor : '-' factor .  (82)

	.  reduce 82


state 114
	expresion : expresion '+' . termino  (73)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	invocacion  goto 82
	termino  goto 138
	factor  goto 84


state 115
	expresion : expresion '-' . termino  (74)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	invocacion  goto 82
	termino  goto 139
	factor  goto 84


state 116
	termino : termino '*' . factor  (76)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	invocacion  goto 82
	factor  goto 140


state 117
	termino : termino '/' . factor  (77)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	'-'  shift 80
	.  error

	invocacion  goto 82
	factor  goto 141


state 118
	invocacion : ID '(' expresion ')' .  (68)

	.  reduce 68


state 119
	impresion : PRINT '(' error ')' .  (87)

	.  reduce 87


state 120
	impresion : PRINT '(' CADENA ')' .  (86)

	.  reduce 86


state 121
	condicion : '(' error ')' .  (95)

	.  reduce 95


state 122
	operador_logico : AND .  (102)

	.  reduce 102


state 123
	operador_logico : OR .  (103)

	.  reduce 103


state 124
	condicion : '(' condicion operador_logico . condicion ')'  (94)

	'('  shift 45
	.  error

	condicion  goto 142


state 125
	condicion : '(' expresion comparador . expresion ')'  (91)
	condicion : '(' expresion comparador . ')'  (93)

	ID  shift 75
	CTE_UINT  shift 76
	CTE_DOUBLE  shift 77
	ERR_CTE_FUERA_RANGO  shift 78
	ERR_FORMATO_CTE  shift 79
	')'  shift 143
	'-'  shift 80
	.  error

	expresion  goto 144
	invocacion  goto 82
	termino  goto 83
	factor  goto 84


state 126
	expresion : expresion . '+' termino  (73)
	expresion : expresion . '-' termino  (74)
	condicion : '(' comparador expresion . ')'  (92)

	')'  shift 145
	'+'  shift 114
	'-'  shift 115
	.  error


state 127
	bloque_sentencias : BEGIN sentencia_ejec END . ';'  (13)

	';'  shift 146
	.  error


state 128
	iteracion : encabezado_iteracion bloque_sentencias UNTIL condicion .  (88)

	.  reduce 88


state 129
	rama_else : ELSE bloque_sentencias .  (110)

	.  reduce 110


state 130
	seleccion : encabezado_if rama_then rama_else ENDIF .  (105)

	.  reduce 105


state 131
	params_func : '(' ')' .  (46)

	.  reduce 46


state 132
	param : tipo_id . ID  (47)

	ID  shift 147
	.  error


state 133
	params_func : '(' param . ')'  (45)

	')'  shift 148
	.  error

